PRF-663: fixed the alignment issue on the supported devices and shop button box sizing issue on ipad.

--- a/src/main/webapp/src/scss/main/minisite/foxtel-now/components/pack-list-item.scss
+++ b/src/main/webapp/src/scss/main/minisite/foxtel-now/components/pack-list-item.scss
@@ -5,81 +5,89 @@
   margin-bottom: 30px;
   list-style: none;
 
-  .foxtel-now-pack-list__item__inner {
-    position: relative;
-    border-radius: $rounding;
-    border: 1px solid transparent;
+  >a {
+    position: absolute;
+    left: 15px;
+    right: 15px;
+    top: 0;
+    bottom: 0;
 
-
-    &.as-text-link {
-      display: none;
-      height: 100%;
-      min-height: 150px;
-      border: 1px solid $foxtel-now-dark-grey;
-
-      @include breakpoint(tablet) {
-        display: block;
-      }
-
-      h3 {
-        font-weight: 400;
-        color: $foxtel-now-dark-grey;
-        bottom: 50%;
-        left: 0%;
-        width: 100%;
-        text-align: center;
-        transform: translateY(50%);
-        font-size: 26px;
-
-        .icon {
-          font-weight: 300;
-          padding-left: 5px;
-        }
-      }
-    }
-
-    &.overlay {
-      &:after {
-        opacity: 0.4;
+    .foxtel-now-pack-list__item__inner {
+        position: relative;
         border-radius: $rounding;
-      }
-    }
+        border: 1px solid transparent;
 
-    .ribbon {
-      @include breakpoint(mobileOnly) {
-        display: none;
-      }
-    }
 
-    img {
-      width: 100%;
-      border-radius: $rounding;
-    }
+        &.as-text-link {
+          display: none;
+          height: 100%;
+          min-height: 150px;
+          border: 1px solid $foxtel-now-dark-grey;
 
-    h3,
-    .legal {
-      z-index: 1;
-      position: absolute;
-    }
+          @include breakpoint(tablet) {
+            display: block;
+          }
 
-    h3 {
-      margin-bottom: 0;
-      bottom: $bottom-margin;
-      left: 15px;
-      color: white;
-      font-size: 18px;
-      font-weight: 700;
-    }
+          h3 {
+            font-weight: 400;
+            color: $foxtel-now-dark-grey;
+            bottom: 50%;
+            left: 0%;
+            width: 100%;
+            text-align: center;
+            transform: translateY(50%);
+            font-size: 26px;
 
-    .legal {
-      bottom: $bottom-margin;
-      right: 20px;
-      color: white;
-      font-size: 11px;
-      opacity: 0.5;
-      font-weight: 300;
-      text-align: right;
-      max-width: 45%;
+            .icon {
+              font-weight: 300;
+              padding-left: 5px;
+            }
+          }
+        }
+
+        &.overlay {
+          &:after {
+            opacity: 0.4;
+            border-radius: $rounding;
+          }
+        }
+
+        .ribbon {
+          @include breakpoint(mobileOnly) {
+            display: none;
+          }
+        }
+
+        img {
+          width: 100%;
+          border-radius: $rounding;
+        }
+
+        h3,
+        .legal {
+          z-index: 1;
+          position: absolute;
+        }
+
+        h3 {
+          margin-bottom: 0;
+          bottom: $bottom-margin;
+          left: 15px;
+          color: white;
+          font-size: 18px;
+          font-weight: 700;
+        }
+
+        .legal {
+          bottom: $bottom-margin;
+          right: 20px;
+          color: white;
+          font-size: 11px;
+          opacity: 0.5;
+          font-weight: 300;
+          text-align: right;
+          max-width: 45%;
+        }
     }
   }
 }
